--- a/exs/exo_1/java-functional/pom.xml
+++ b/exs/exo_1/java-functional/pom.xml
@@ -40,6 +40,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                <mainClass>com.example.App</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
