--- a/exs/exo_2/problem_1_java/pom.xml
+++ b/exs/exo_2/problem_1_java/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>exo2-java</artifactId>
-    <name>exo2-java</name>
+    <artifactId>problem_1_java</artifactId>
+    <name>problem_1_java</name>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
